// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewDetailsLink2 /> should render the link when a valid serviceOrderEvents and serviceOrderEventStatus are provided (en) 1`] = `
<button
  className="dte-wismo-button dte-wismo-button-link"
  data-track="mimo"
  data-track-action="click"
  data-track-detail="order tracker"
  onClick={[Function]}
>
  View Details
</button>
`;

exports[`<ViewDetailsLink2 /> should render the link when a valid serviceOrderEvents and serviceOrderEventStatus are provided (es) 1`] = `
<button
  className="dte-wismo-button dte-wismo-button-link"
  data-track="mimo"
  data-track-action="click"
  data-track-detail="order tracker"
  onClick={[Function]}
>
  Ver Detalles
</button>
`;
